istio-ambient-with-opa/opa.yaml
############################################################
# AuthorizationPolicy to tell Istio to use OPA as the Authz Server
############################################################
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ext-authz
  namespace: app
spec:
  action: CUSTOM
  provider:
    name: opa-ext-authz-grpc
  rules:
  - to:
    - operation:
        notPaths: ["/health"]
---
############################################################
# Example configuration to bootstrap OPA-Istio sidecars.
############################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa-istio
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa-istio
  template:
    metadata:
      labels:
        app: opa-istio
    spec:
      containers:
      - name: opa-istio
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9191
          protocol: TCP
        - containerPort: 8282
          protocol: TCP
        - containerPort: 8181
          protocol: TCP
        image: openpolicyagent/opa:0.68.0-istio-4-static
        args:
        - "run"
        - "--server"
        - "--addr=0.0.0.0:8181"
        - "--config-file=/config/config.yaml"
        - "--diagnostic-addr=0.0.0.0:8282"
        - "/policy/policy.rego"
        volumeMounts:
        - name: opa-istio-config
          mountPath: /config
        - name: opa-policy
          mountPath: /policy
        livenessProbe:
          httpGet:
            path: /health?plugins
            port: 8282
        readinessProbe:
          httpGet:
            path: /health?plugins
            port: 8282
      volumes:
      - name: opa-istio-config
        configMap:
          name: opa-istio-config
      - name: opa-policy
        configMap:
          name: opa-policy
---
apiVersion: v1
kind: Service
metadata:
  name: opa-istio
  namespace: platform
spec:
  ports:
  - name: grpc
    protocol: TCP
    port: 9191
    targetPort: 9191
  selector:
    app: opa-istio
---
